<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <LinearLayout
    android:id="@+id/contentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.novoda.todoapp.views.TodoAppBar
      android:id="@+id/app_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin">

      <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

      <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:gravity="top"
        android:hint="@string/description_hint" />

    </LinearLayout>

  </LinearLayout>

  <android.support.design.widget.FloatingActionButton
    android:id="@+id/fab_task_done"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_margin"
    android:src="@drawable/ic_done"
    app:fabSize="normal"
    app:layout_anchor="@id/contentContainer"
    app:layout_anchorGravity="bottom|right|end" />

</merge>
