<?xml version="1.0" encoding="utf-8"?>
<com.novoda.todoapp.tasks.view.TasksView xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/content"
  android:layout_width="match_parent"
  android:layout_height="match_parent" />
