<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/nav_drawer"
  android:layout_width="wrap_content"
  android:layout_height="match_parent"
  android:layout_gravity="start"
  android:fitsSystemWindows="true"
  app:headerLayout="@layout/nav_drawer_header"
  app:menu="@menu/nav_drawer_menu"
  tools:showIn="@layout/merge_tasks_view" />
