<merge xmlns:android="http://schemas.android.com/apk/res/android">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.novoda.todoapp.views.TodoAppBar
      android:id="@+id/app_bar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <TextView
      android:id="@+id/statistics_label"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/statistics_text_view_padding"
      android:textAppearance="?android:attr/textAppearanceMedium" />

  </LinearLayout>

  <include layout="@layout/nav_drawer_layout" />

</merge>
